# Rustlectron-Image-Manipulator

./: README.md  package-lock.json  package.json
backend/: Cargo.toml  package-lock.json  package.json
backend/src/: lib.rs
public/: electron.js
src/: App.js
src/components/: ImageDisplay.js
