[package]
name = "backend"
version = "0.1.0"
authors = ["Dylan Duhamel"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
base64 = { version = "0.21.4", features = [] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
